--- a/SharpFileDB.Viewer/SharpFileDB.Viewer.csproj
+++ b/SharpFileDB.Viewer/SharpFileDB.Viewer.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CAAAD76C-01AD-43DE-9B3E-1BAE86C4F1CB}</ProjectGuid>
+    <ProjectGuid>{B3985FC3-81EF-40AD-8660-8B3B458DF869}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpFileDB.Demo.MyNote</RootNamespace>
-    <AssemblyName>SharpFileDB.Demo.MyNote</AssemblyName>
+    <RootNamespace>SharpFileDB.Viewer</RootNamespace>
+    <AssemblyName>SharpFileDB.Viewer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -44,41 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FormViewer.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormAddNote.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormAddNote.Designer.cs">
-      <DependentUpon>FormAddNote.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormEditNote.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormEditNote.Designer.cs">
-      <DependentUpon>FormEditNote.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormNoteList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormNoteList.Designer.cs">
-      <DependentUpon>FormNoteList.cs</DependentUpon>
+    <Compile Include="FormViewer.Designer.cs">
+      <DependentUpon>FormViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tables\Note.cs" />
-    <EmbeddedResource Include="FormAddNote.resx">
-      <DependentUpon>FormAddNote.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormEditNote.resx">
-      <DependentUpon>FormEditNote.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormNoteList.resx">
-      <DependentUpon>FormNoteList.cs</DependentUpon>
+    <EmbeddedResource Include="FormViewer.resx">
+      <DependentUpon>FormViewer.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -103,6 +78,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SharpFileDB.Zoo\SharpFileDB.Zoo.csproj">
+      <Project>{a3b24709-839d-41ad-a623-e58f50ba6bad}</Project>
+      <Name>SharpFileDB.Zoo</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SharpFileDB\SharpFileDB.csproj">
       <Project>{e5c7d3c7-1dd6-4c4a-b9b5-0abc33031cd1}</Project>
       <Name>SharpFileDB</Name>
