--- a/SharpFileDB.VisualDesigner/SharpFileDB.VisualDesigner.csproj
+++ b/SharpFileDB.VisualDesigner/SharpFileDB.VisualDesigner.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CAAAD76C-01AD-43DE-9B3E-1BAE86C4F1CB}</ProjectGuid>
+    <ProjectGuid>{94F43E24-C472-4B24-AFDC-38E65BAED579}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpFileDB.Demo.MyNote</RootNamespace>
-    <AssemblyName>SharpFileDB.Demo.MyNote</AssemblyName>
+    <RootNamespace>SharpFileDB.VisualDesigner</RootNamespace>
+    <AssemblyName>SharpFileDB.VisualDesigner</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -50,36 +50,8 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormAddNote.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormAddNote.Designer.cs">
-      <DependentUpon>FormAddNote.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormEditNote.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormEditNote.Designer.cs">
-      <DependentUpon>FormEditNote.cs</DependentUpon>
-    </Compile>
-    <Compile Include="FormNoteList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormNoteList.Designer.cs">
-      <DependentUpon>FormNoteList.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tables\Note.cs" />
-    <EmbeddedResource Include="FormAddNote.resx">
-      <DependentUpon>FormAddNote.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormEditNote.resx">
-      <DependentUpon>FormEditNote.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormNoteList.resx">
-      <DependentUpon>FormNoteList.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -101,12 +73,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SharpFileDB\SharpFileDB.csproj">
-      <Project>{e5c7d3c7-1dd6-4c4a-b9b5-0abc33031cd1}</Project>
-      <Name>SharpFileDB</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="readme.txt" />
