--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Blocks\PageHeaderBlock.cs" />
     <Compile Include="Blocks\SkipListNodeBlock.cs" />
     <Compile Include="Blocks\TableBlock.cs" />
+    <Compile Include="Utilities\ILinkedNodeHelper.cs" />
     <Compile Include="SharpFileDBHelper\IndexInfo.cs" />
     <Compile Include="SharpFileDBHelper\SharpFileDBInfo.cs" />
     <Compile Include="SharpFileDBHelper\TableInfo.cs" />
@@ -70,11 +71,13 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Utilities\BytesHelper.cs" />
+    <Compile Include="Utilities\DataBlockHelper.cs" />
     <Compile Include="Utilities\DBHeaderBlockHelper.cs" />
     <Compile Include="Utilities\FileDBContextHelper.cs" />
     <Compile Include="Utilities\IComparableHelper.cs" />
     <Compile Include="Utilities\IndexBlockHelper.cs" />
     <Compile Include="SharpFileDBHelper\SharpFileDBHelper.cs" />
+    <Compile Include="Utilities\Int64Helper.cs" />
     <Compile Include="Utilities\TableHelper.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="Utilities\Consts.cs" />
