--- a/SharpFileDB.Demo.MyNote/SharpFileDB.Demo.MyNote.csproj
+++ b/SharpFileDB.Demo.MyNote/SharpFileDB.Demo.MyNote.csproj
@@ -68,6 +68,12 @@
     <Compile Include="FormNoteList.Designer.cs">
       <DependentUpon>FormNoteList.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTip.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTip.Designer.cs">
+      <DependentUpon>FormTip.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tables\Note.cs" />
@@ -79,6 +85,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormNoteList.resx">
       <DependentUpon>FormNoteList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTip.resx">
+      <DependentUpon>FormTip.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
