--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Blocks\AllocBlock.cs" />
     <Compile Include="Blocks\Block.cs" />
     <Compile Include="Blocks\DataBlock.cs" />
     <Compile Include="Blocks\DBHeaderBlock.cs">
