--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -65,7 +65,7 @@
     <Compile Include="FileDBContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableIndexAttribute.cs" />
-    <Compile Include="Utilities\AllocPageTypes.cs">
+    <Compile Include="Blocks\AllocPageTypes.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Utilities\BlockHelper.cs">
