--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -54,6 +54,15 @@
     <Compile Include="Blocks\PageHeaderBlock.cs" />
     <Compile Include="Blocks\SkipListNodeBlock.cs" />
     <Compile Include="Blocks\TableBlock.cs" />
+    <Compile Include="FileDBContext_Update.cs" />
+    <Compile Include="FileDBContext_Insert.cs" />
+    <Compile Include="FileDBContext_Ctor.cs" />
+    <Compile Include="FileDBContext_Delete.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="FileDBContext_Field.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Utilities\ILinkedNodeHelper.cs" />
     <Compile Include="SharpFileDBHelper\IndexInfo.cs" />
     <Compile Include="SharpFileDBHelper\SharpFileDBInfo.cs" />
