--- a/SharpFileDB.DebugHelper/SharpFileDB.DebugHelper.csproj
+++ b/SharpFileDB.DebugHelper/SharpFileDB.DebugHelper.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharpFileDBHelper.cs" />
     <Compile Include="SharpFileDBInfo.cs" />
+    <Compile Include="SkipListHelper.cs" />
     <Compile Include="TableInfo.cs" />
   </ItemGroup>
   <ItemGroup>
