添加 BlockCache缓存从数据库读取的Block。

--- a/SharpFileDB/SharpFileDB.csproj
+++ b/SharpFileDB/SharpFileDB.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Blocks\AllocBlock.cs" />
     <Compile Include="Blocks\Block.cs" />
+    <Compile Include="Blocks\BlockCache.cs" />
     <Compile Include="Blocks\DataBlock.cs" />
     <Compile Include="Blocks\DBHeaderBlock.cs">
       <SubType>Code</SubType>
