--- a/SharpFileDB.DebugHelper/SharpFileDB.DebugHelper.csproj
+++ b/SharpFileDB.DebugHelper/SharpFileDB.DebugHelper.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlocksDistributionHelper.cs" />
     <Compile Include="IndexInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SharpFileDBHelper.cs" />
